--- a/Microservices/Gateway/src/main/resources/application.yml
+++ b/Microservices/Gateway/src/main/resources/application.yml
@@ -1,16 +1,40 @@
 server.port: 9999
 
+
 spring:
   application.name: gateway
   cloud:
       gateway.server.webflux:
         routes:
         - id: delivery-tracking-route
-          uri: http://localhost:8080
+          uri: lb://delivery-tracking
           predicates:
             - Path=/api/v1/deliveries/**
             - Method=GET,POST,PUT,PATCH,DELETE,OPTIONS
         - id: courier-management-route
-          uri: http://localhost:8081
+          uri: lb://courier-management
           predicates:
             - Path=/api/v1/couriers/**
+        - id: courier-management-public-route
+          uri: lb://courier-management
+          predicates:
+            - Path=/public/couriers
+            - Method=GET
+          filters:
+            - RewritePath=/public/couriers, /api/v1/couriers
+            - RemoveJsonAttributesResponseBody=pendingDeliveries, pendingDeliveriesQuantity,phone,true
+        - id: courier-management-public-segments-route
+          uri: lb://courier-management
+          predicates:
+            - Path=/public/couriers/**
+            - Method=GET
+          filters:
+            - RewritePath=/public/couriers/(?<segment>.*), /api/v1/couriers/${segment}
+            - RemoveJsonAttributesResponseBody=pendingDeliveries, pendingDeliveriesQuantity,phone,true
+
+eureka:
+    client:
+      register-with-eureka: false
+      fetch-registry: true
+      serviceUrl:
+        defaultZone: http://localhost:8761/eureka/
