--- a/Microservices/Gateway/src/main/resources/application.yml
+++ b/Microservices/Gateway/src/main/resources/application.yml
@@ -5,12 +5,33 @@ spring:
   application.name: gateway
   cloud:
       gateway.server.webflux:
+        httpclient:
+          connect-timeout: 10
+          response-timeout: 300ms
         routes:
         - id: delivery-tracking-route
           uri: lb://delivery-tracking
           predicates:
             - Path=/api/v1/deliveries/**
             - Method=GET,POST,PUT,PATCH,DELETE,OPTIONS
+          filters:
+            - name: Retry
+              args:
+                retries: 3
+                statuses: BAD_GATEWAY, GATEWAY_TIMEOUT, INTERNAL_SERVER_ERROR
+                methods: GET, PUT
+                backoff:
+                  firstBackoff: 10ms
+                  maxBackoff: 30ms
+                  factor: 2
+                  timeout: 400ms
+            - name: CircuitBreaker
+              args:
+                name: delivery-tracking-route-circuit-breaker
+                statusCodes:
+                  - 500
+                  - 502
+                  - 504
         - id: courier-management-route
           uri: lb://courier-management
           predicates:
@@ -38,3 +59,17 @@ eureka:
       fetch-registry: true
       serviceUrl:
         defaultZone: http://localhost:8761/eureka/
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 10000
+    instances:
+      delivery-tracking-route-circuit-breaker:
+        baseConfig: default
+        waitDurationInOpenState: 5000
